# mcp-chat-bot

./: README.md  docker-compose.yaml
fastapi-server/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml  requirements.txt
fastapi-server/app/: core.py  main.py  worker.py
fastapi-server/app/agents/: __init__.py  mcp_agent.py
fastapi-server/app/config/: settings.py
fastapi-server/app/ingestion/: service.py
fastapi-server/app/routes/: chat.py  upload.py
fastapi-server/app/schemas/: chat.py  request.py
fastapi-server/app/utils/: helpers.py
fastmcp-server/: .dockerignore  .env.example  Dockerfile  config.py  pyproject.toml  requirements.txt  server.py
next-frontend/: Dockerfile  README.md  package-lock.json  package.json
next-frontend/src/app/: globals.css  page.tsx
next-frontend/src/components/: ChatInterface.tsx
next-frontend/src/utils/: api.ts
